# qsimplify

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.demo  README.md  pyproject.toml  sonar-project.properties
qsimplify/: __main__.py  analyzer.py  app.py  converter.py  demo.py  drawer.py  math_utils.py  model.py  qft.py  qft2.py  simplifier.py  utils.py
qsimplify/analyzer/: __init__.py  analyzer.py  metrics.py  quantum_metrics.py
qsimplify/controller/: circuit_controller.py  validator.py
qsimplify/converter/: __init__.py  converter.py  dto_converter.py  gates_converter.py  graph_converter.py  qiskit_converter.py
qsimplify/drawer/: __init__.py  drawer.py
qsimplify/dto/: __init__.py  quantum_gate.py
qsimplify/generator/: __init__.py  code_generator.py  qiskit_generator.py
qsimplify/model/: __init__.py  circuit_builder.py  edge_data.py  edge_name.py  gate_name.py  graph_builder.py  graph_cleaner.py  graph_edge.py  graph_node.py  position.py  quantum_gate.py  quantum_graph.py
qsimplify/simplifier/: __init__.py  default_rules.json  default_rules.json5  graph_mappings.py  rule_parser.py  simplification_rule.py  simplifier.py
quantum_circuit_simplifier/: __main__.py  analyzer.py  converter.py  drawer.py  model.py  simplifier.py  utils.py
tests/: __init__.py  analyzer_test.py  converter_test.py  math_utils_test.py  model_test.py  simplifier_test.py
tests/analyzer/: analyzer_test.py
tests/controller/: circuit_controller_test.py
tests/converter/: converter_test.py  qiskit_converter_test.py
tests/integration/: grover_test.py  qft_test.py
tests/model/: graph_cleaner_test.py  quantum_gate_test.py  quantum_graph_test.py
tests/simplifier/: simplication_rule_test.py  simplifier_test.py
