[project]
name = "qsimplify"
version = "0.1.0"
description = "A quantum circuit simplifier"
readme = "README.md"
authors = [
    { name = "Víctor Mardones", email = "vmardones.dev@gmail.com" }
]
requires-python = ">=3.12,<4"
dependencies = [
    "graphviz>=0.20.3",
    "json5>=0.12.0",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "pylatexenc>=2.10",
    "qiskit>=2.0.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pyright>=1.1.398",
    "ruff>=0.11.4",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[tool.black]
line_length = 100

[tool.isort]
profile = "black"
