[project]
name = "qsimplify"
version = "0.1.0"
description = "A quantum circuit simplifier"
readme = "README.md"
authors = [
    { name = "Víctor Mardones", email = "vmardones.dev@gmail.com" }
]
requires-python = ">=3.12,<4"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.0",
    "graphviz>=0.20.3",
    "json5>=0.12.0",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "pydantic>=2.11.3",
    "pylatexenc>=2.10",
    "qiskit>=2.0.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.398",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.4",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", "F", "ERA", "ANN", "S", "B", "A", "C4", "FIX", "FA", "LOG", "G", "INP", "PIE", "PT", "RSE", "RET", "SLF",
    "SIM", "ARG", "PTH", "FLY", "C90", "N", "PERF", "PLC", "PLE", "FURB", "RUF"
]
ignore = ["PLC0414"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F403", "F405", "ANN201", "S101"]
